@@ -32,7 +32,9 @@ void write_unaligned(Output_stream *file)
 	for (size_t i = 0; i < n; ++i) {
 		if (!query_aligned[i]) {
 			std::stringstream ss;
-			ss << '>' << query_ids::get()[i].c_str() << endl << query_seqs::get()[i] << endl;
+			ss << '>' << query_ids::get()[i].c_str() << endl;
+			(align_mode.query_translated ? query_source_seqs::get()[i] : query_seqs::get()[i]).print(ss, input_value_traits);
+			ss << endl;
 			s = ss.str();
 			file->write(s.data(), s.length());
 		}
